# all-the-same

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
