[package]
name = "all-the-same"
description = "A procedural macro that copy-pastes match arms for new type variant enums."
version = "1.1.0"
edition = "2021"
repository = "https://github.com/inikulin/all-the-same"
authors = ["Ivan Nikulin (ifaaan@gmail.com)"]
license = "BSD-3-Clause"
readme = "README.md"
documentation = "https://docs.rs/all-the-same"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1" }
syn = { version = "1", features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["net"] }
